--- a/.github/workflows/resource_creation_testing.yml
+++ b/.github/workflows/resource_creation_testing.yml
@@ -3,8 +3,9 @@ name: "writeaYAMLfileForTesting workflow"
 on:
  push:
   branches:
-   - 'main'
-   - 'feature/*'
+   - main
+   
+   
 permissions:
   id-token: write
   contents: read
@@ -18,9 +19,9 @@ jobs:
    - name: Checkout
      uses: actions/checkout@v5.0.0
    - name: Install Terraform
-     uses: little-core-labs/install-terraform@v2.0.0
+     uses: little-core-labs/install-terraform@v2.3.0
      with:
-       version: v2.0.0
+       version: v2.3.0
 
    - name: Azure Login
      uses: Azure/login@v2.3.0
