--- a/.github/workflows/resource_creation_testing.yml
+++ b/.github/workflows/resource_creation_testing.yml
@@ -1,10 +1,13 @@
 name: "writeaYAMLfileForTesting workflow"
 
 on:
+  pull_request:
+    branches:
+    - main
   push:
     branches:
       - main
-
+      
 permissions:
   id-token: write
   contents: read
