--- a/.github/workflows/resource_creation_testing.yml
+++ b/.github/workflows/resource_creation_testing.yml
@@ -34,9 +34,9 @@ jobs:
       - name: Azure Login
         uses: Azure/login@v2.3.0
         with:
-          clientId: ${{ secrets.AZURE_CLIENT_ID }}
-          tenantId: ${{ secrets.AZURE_TENANT_ID }}
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform FMT
         working-directory: "."
@@ -77,9 +77,9 @@ jobs:
       - name: Azure Login
         uses: Azure/login@v2.3.0
         with:
-          clientId: ${{ secrets.AZURE_CLIENT_ID }}
-          tenantId: ${{ secrets.AZURE_TENANT_ID }}
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Terraform Init
         working-directory: "."
