--- a/.github/workflows/resource_creation_testing.yml
+++ b/.github/workflows/resource_creation_testing.yml
@@ -88,12 +88,17 @@ jobs:
       #   env:
       #     CHECKOV_SKIP_UPDATE: "true"
 
-      # 🔍 tflint - Terraform linter
-      - name: Setup TFLint
-        uses: terraform-linters/setup-tflint@v4
+      - name: Download TFLint for Windows
+        shell: powershell
+        run: |
+          Invoke-WebRequest -Uri "https://github.com/terraform-linters/tflint/releases/latest/download/tflint_windows_amd64.zip" -OutFile "tflint.zip"
+          Expand-Archive -Path "tflint.zip" -DestinationPath "$PWD\tflint"
+          echo "$PWD\tflint" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       - name: Run TFLint
+        shell: powershell
         run: tflint --init && tflint
+
 
   terraform_init_apply:
     runs-on: zxc12
