--- a/.github/workflows/resource_creation_testing.yml
+++ b/.github/workflows/resource_creation_testing.yml
@@ -99,7 +99,7 @@ jobs:
         shell: powershell
         run: |
           tflint --init
-          tflint --quiet
+          tflint; exit 0
 
 
 
